Merged PR 13119: Merged PR 13037: endpoint lista de servicios
Merged PR 13037: endpoint lista de servicios

# [NGM-6764](https://acelerabga.atlassian.net/browse/NGM-6764) - [BFF] Creación de servicio de listado de servicios para pago

Enpoint de obtener lista servicios

## Cambios

- PaymentServicesController
- PaymentServicesService
- PaymentServicesProvider
- Tests
- Filters
- Cache
- Errors

Cherry-picked from commit `7c95b114`.