@@ -4,11 +4,10 @@ import bg.com.bo.bff.commons.filters.interfaces.IFilter;
 import bg.com.bo.bff.providers.dtos.response.own.account.mw.AccountReportBasicResponse;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class AmountRangeFilter implements IFilter<AccountReportBasicResponse.AccountReportData> {
-    private Double minAmount;
-    private Double maxAmount;
+    private final Double minAmount;
+    private final Double maxAmount;
 
     public AmountRangeFilter(Double minAmount, Double maxAmount) {
         this.minAmount = minAmount;
@@ -23,6 +22,6 @@ public class AmountRangeFilter implements IFilter<AccountReportBasicResponse.Acc
                     boolean isMaxValid = maxAmount == null || extract.getAmount() <= maxAmount;
                     return isMinValid && isMaxValid;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
