@@ -4,11 +4,10 @@ import bg.com.bo.bff.commons.filters.interfaces.IFilter;
 import bg.com.bo.bff.providers.dtos.response.own.account.mw.AccountReportBasicResponse;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TypeFilter implements IFilter<AccountReportBasicResponse.AccountReportData> {
 
-    private String tipeMovement;
+    private final String tipeMovement;
 
     public TypeFilter(String tipeMovement) {
         this.tipeMovement = tipeMovement;
@@ -18,6 +17,6 @@ public class TypeFilter implements IFilter<AccountReportBasicResponse.AccountRep
     public List<AccountReportBasicResponse.AccountReportData> apply(List<AccountReportBasicResponse.AccountReportData> list) {
         return list.stream()
                 .filter(extract -> tipeMovement == null || tipeMovement.equals(extract.getMoveType()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
